--- a/assets/scss/mal-med-avel.scss
+++ b/assets/scss/mal-med-avel.scss
@@ -34,7 +34,7 @@ $breakpoint-mobile: 600px;
 .breeding-intro {
     width: 60%;
     margin: 60px auto 0 auto;
-    background-color: #ebeaea;
+    background-color: white;
     padding: 20px;
     border-radius: 20px;
 
